kubernetes-from-scratch/k8/manifests/pokedex-app/deployment-backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  selector:
    matchLabels:
      app: pokeapi
  template:
    metadata:
      labels:
        app: pokeapi
    spec:
      containers:
        - name: pokeapi
          image: dersimabbas/pokeapi:v1
          resources:
            requests:
              memory: "256Mi"
              cpu: "500m"
            limits:
              memory: "512Mi"
              cpu: "1"
          ports:
            - containerPort: 80
