kubernetes-from-scratch/k8/manifests/pokedex-app/service-api.yml
apiVersion: v1
kind: Service
metadata:
  name: pokedex-service
spec:
  type: ClusterIP
  ports:
    - targetPort: 80
      port: 80

  selector:
    app: pokeapi
