kubernetes-from-scratch/k8/manifests/pokedex-app/service-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service

spec:
  type: ClusterIP
  ports:
    - targetPort: 80 # port of the pod where app runs
      port: 80 # service port

  selector: #selector is a way to filter and match pods and knowing which pod exactly.
    app: pokedex
# if no target provided default fallback is same as port
#keep labels unique for selector easier to identify pods than going by name or ip addr
#if no NodePort provided, it fallbacks to something between 30k-32767
