kubernetes-from-scratch/k8/manifests/pokedex-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app
spec:
  ingressClassName: nginx
  rules:
    - host: app.192.168.56.30.nip.io
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: pokedex-service
                port: { number: 80 }

          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port: { number: 80 }
